packages/kit/test/apps/basics/src/routes/errors/init-error-endpoint.js
// @ts-expect-error
thisvariableisnotdefined;

export function GET() {
	return {
		body: {
			answer: 42
		}
	};
}
